<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="goods_search_hint">复古板鞋</string>
    <string name="goods_all_category">全部分类</string>
    <string name="goods_recommend">精品/推荐</string>
    <string name="goods_buy_now">立即购买</string>
    <string name="goods_limit">限量</string>
    <string name="goods_broken_lot">散批</string>
    <string name="goods_input_key">请输入关键字</string>
    <string name="goods_cancel">取消</string>
    <string name="goods_hot_search">热门搜索</string>
    <string name="goods_search_history">搜索历史</string>
    <string name="goods_clear_history">清空搜索历史</string>
    <string name="goods_synthesize">综合</string>
    <string name="goods_sales_volume">销量</string>
    <string name="goods_brank">品牌</string>
    <string name="goods_filter">筛选</string>
    <string name="goods_empty_search">暂无更多商品</string>
    <string name="goods_synthesize_sort">综合排序</string>
    <string name="goods_ssort_high_low">价格从高到低</string>
    <string name="goods_ssort_low_high">价格从低到高</string>
    <string name="goods_confirm">确认</string>
    <string name="goods_clear_brand">清除品牌</string>
    <string name="goods_brands_filter">品牌筛选</string>
    <string name="goods_pattern">模式</string>
    <string name="goods_price_section">价格区间</string>
    <string name="goods_max_price">最高价</string>
    <string name="goods_min_price">最低价</string>
    <string name="goods_reset">重置</string>
    <string name="goods_sort_price_desc">价格高</string>
    <string name="goods_sort_price_asc">价格低</string>
    <string name="goods_input_search_content">请输入要搜索的内容</string>
    <string name="goods_service">客服</string>
    <string name="goods_collect">收藏</string>
    <string name="goods_shoppingcart">购物车</string>
    <string name="goods_add_shopping_cart">加入购物车</string>
    <string name="goods_retail_price_tag">零售价:</string>
    <string name="goods_select">选择</string>
    <string name="goods_please_select">请选择</string>
    <string name="goods_specification">规格</string>
    <string name="goods_platform_authentication">平台认证</string>
    <string name="goods_haitao_authentication">海淘认证</string>
    <string name="goods_format_shop_sell_number">在售商品%s件</string>
    <string name="goods_to_shop_look">进店逛逛</string>
    <string name="goods_detail_txt1">升级运营商，即得更高收益</string>
    <string name="goods_detail_txt2">了解详情></string>
    <string name="goods_number">数量</string>
    <string name="goods_format_inventory">库存 %s</string>
    <string name="goods_add_shopping_cart_success">加入购物车成功</string>
    <string name="goods_collect_goods_success">收藏成功</string>
    <string name="goods_total">合计：</string>
    <string name="goods_submit_order">提交订单</string>
    <string name="goods_confirm_order">确认订单</string>
    <string name="goods_delivery_mode">配送方式</string>
    <string name="goods_order_remark">订单备注</string>
    <string name="goods_remark_hint">请输入备注信息</string>
    <string name="goods_subtotal">小计</string>
    <string name="goods_add_new_address">没有收货地址，去新建收货地址</string>
    <string name="goods_express">快递</string>
    <string name="goods_money_tag" >￥</string>
</resources>