<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/priceSectionTV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dp_8"
        style="@style/tv_14_313131"
        android:text="@string/goods_price_section"
        />

    <EditText
        android:id="@+id/priceLeftET"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_36"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/tv_14_313131"
        android:gravity="center"
        android:background="@drawable/goods_bg_price_section"
        app:layout_constraintTop_toBottomOf="@id/priceSectionTV"
        app:layout_constraintRight_toLeftOf="@id/priceLineV"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:hint="@string/goods_min_price"
        android:inputType="numberDecimal"
        android:textColorHint="@color/cl_707070"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_8"
        />

    <View
        android:id="@+id/priceLineV"
        android:layout_width="@dimen/dp_6"
        android:layout_height="@dimen/dp_1"
        app:layout_constraintLeft_toRightOf="@id/priceLeftET"
        app:layout_constraintRight_toLeftOf="@id/priceRightET"
        app:layout_constraintTop_toTopOf="@id/priceLeftET"
        app:layout_constraintBottom_toBottomOf="@id/priceLeftET"
        android:background="@color/cl_707070"
        />

    <EditText
        android:id="@+id/priceRightET"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_36"
        app:layout_constraintLeft_toRightOf="@id/priceLineV"
        android:layout_marginLeft="@dimen/dp_8"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/tv_14_313131"
        android:gravity="center"
        android:background="@drawable/goods_bg_price_section"
        app:layout_constraintTop_toBottomOf="@id/priceSectionTV"
        android:layout_marginRight="@dimen/dp_12"
        android:hint="@string/goods_max_price"
        android:textColorHint="@color/cl_707070"
        android:inputType="numberDecimal"
        />


</androidx.constraintlayout.widget.ConstraintLayout>