<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.GoodsDetailActivity">

    <ImageView
        android:id="@+id/shareGoodsIV"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/contentRV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contentRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/leftCL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/actionBarFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionBarCL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            >

            <ImageView
                android:id="@+id/backIV"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_6"
                android:src="@drawable/ic_back"
                android:padding="@dimen/dp_6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/shareIV"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_6"
                android:clickable="true"
                android:padding="@dimen/dp_1"
                android:src="@drawable/goods_icon_share_white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leftCL"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:background="@color/cl_ffffff"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/rightCL">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/serviceCL"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/collectCL"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/tv_14_313131"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/goods_ic_service"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center_horizontal"
                android:text="@string/goods_service"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/collectCL"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/serviceCL"
            app:layout_constraintRight_toLeftOf="@id/shoppingCartCL"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/tv_14_313131"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/goods_ic_collect"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center_horizontal"
                android:text="@string/goods_collect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shoppingCartCL"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_4"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1.2"
            app:layout_constraintLeft_toRightOf="@id/collectCL"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/tv_14_313131"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/goods_ic_shoppingcart"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center_horizontal"
                android:text="@string/goods_shoppingcart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rightCL"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:background="@color/cl_ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1.2"
        app:layout_constraintLeft_toRightOf="@id/leftCL"
        app:layout_constraintRight_toRightOf="parent">


        <TextView
            android:id="@+id/addShoppingCartTV"
            style="@style/tv_14_ffffff"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/goods_bg_add_cart"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/goods_add_shopping_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buyNowTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/buyNowTV"
            style="@style/tv_14_ffffff"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:background="@drawable/goods_bg_buy_now"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/goods_buy_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/addShoppingCartTV"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>